--- a/BooksByHalim/BooksByHalim/BooksByHalim.csproj
+++ b/BooksByHalim/BooksByHalim/BooksByHalim.csproj
@@ -6,12 +6,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Properties\Cache\cache.txt" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Validation" Version="16.10.34" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="Validation" Version="2.5.42" />
+    <PackageReference Include="Validator" Version="1.0.0" />
   </ItemGroup>
 
   <ItemGroup>
